Refactor Sell Post Entity